--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-K2U7NFN;Database=fcgdb_Jogos;User Id=admin;Password=admin;"
     }
-  },
-  "AllowedHosts": "*"
 }
