--- a/JogosApplication/Jogos.Service.Application.csproj
+++ b/JogosApplication/Jogos.Service.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JogosDomain\JogosDomain.csproj" />
+    <ProjectReference Include="..\JogosDomain\Jogos.Service.Domain.csproj" />
   </ItemGroup>
 
 </Project>
