Feat: Fluent Api Ok

--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-K2U7NFN;Database=fcgdb_Jogos;User Id=admin;Password=admin;"
+        "DefaultConnection": "Data Source=DESKTOP-K2U7NFN;Initial Catalog=fcgdb_Jogos;Integrated Security=True;Encrypt=False"
     }
 }
