--- a/JogosApplication/Jogos.Service.Application.csproj
+++ b/JogosApplication/Jogos.Service.Application.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\JogosDomain\Jogos.Service.Domain.csproj" />
+    <ProjectReference Include="..\JogosRepository\Jogos.Service.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
