Feat: Criação de endpoint de criar jogo,listar categorias e estudios, e também inclusão de logs e middleware.

--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -8,5 +8,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=DESKTOP-K2U7NFN;Initial Catalog=fcgdb_Jogos;Integrated Security=True;Encrypt=False"
+    },
+    "Directory": {
+        "path": "C:\\FIAP Cloud Games Log\\log.txt"
     }
 }
