--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -13,6 +13,6 @@
         "path": "C:\\FIAP Cloud Games Log\\log.txt"
     },
     "ApiSettings": {
-        "BaseAddress": "https://localhost:7209"
+        "BaseAddress": "https://localhost:44386/"
     }
 }
