--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=0.tcp.sa.ngrok.io,12350;Initial Catalog=fcgdb_Jogos;User ID=sa;Password=sa123;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=NT-GUIRABELO;Initial Catalog=fcgdb_Jogos;User ID=sa;Password=sa123;Encrypt=False;TrustServerCertificate=True;"
   },
   "Directory": {
-    "path": "C:\\FIAP Cloud Games Log\\log.txt"
+    "path": "C:\\Logs\\log.txt"
   },
   "ApiSettings": {
-    "BaseAddress": "https://localhost:44386/"
+    "BaseAddress": "http://54.152.193.82:5003/"
   },
   "ElasticSettings": {
     "ApiKey": "RkpfVnA1a0ItMmV4eU1VNG1VSks6ZTVJU01ablYzMnB4ZTBvdXd6Q053Zw==",
