--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=NT-GUIRABELO;Initial Catalog=fcgdb_Jogos;User ID=sa;Password=sa123;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=0.tcp.sa.ngrok.io,12350;Initial Catalog=fcgdb_Pagamentos;User ID=sa;Password=sa123;Encrypt=False;TrustServerCertificate=True;"
   },
   "Directory": {
     "path": "C:\\Logs\\log.txt"
