--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build solution
         run: dotnet build --configuration Debug
         
+      - name: Run tests
+        run: dotnet test Jogos.Service.Tests/Jogos.Service.Tests.csproj --no-restore --verbosity normal
+        
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
