--- a/JogosAPI/appsettings.json
+++ b/JogosAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=0.tcp.sa.ngrok.io,14232;Initial Catalog=fcgdb_Jogos;User ID=sa;Password=sa123;Encrypt=False;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-K2U7NFN;Initial Catalog=fcgdb_Jogos;Integrated Security=True;Encrypt=False"
+    },
   "Directory": {
     "path": "C:\\Logs\\log.txt"
   },
