--- a/JogosRepository/Jogos.Service.Infrastructure.csproj
+++ b/JogosRepository/Jogos.Service.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JogosDomain\Jogos.Service.Domain.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +26,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.8" />
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Queue\Interface\" />
+    <Folder Include="Queue\Consumer\" />
   </ItemGroup>
 
 </Project>
